--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made in Tokyo 🥁 Thanks to Angela
   </footer>
   <script src="index.js"></script>
 </body>
